Fix overflow hidden -> auto

--- a/app/assets/stylesheets/objects/_tabs.scss
+++ b/app/assets/stylesheets/objects/_tabs.scss
@@ -64,7 +64,7 @@
 
     pre.highlight {
       border-radius: 0 0 3px 3px;
-      overflow: hidden;
+      overflow: auto;
     }
 
     position: relative;
